--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@kunukn/react-collapse": "^1.0.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-icon": "^1.0.0",
+    "react-icons": "^3.5.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
